AKEL_WARD.out.tests.txt
-- The CXX compiler identification is GNU 10.2.1
-- The C compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Check for working C compiler: /usr/bin/cc - skipped
-- Detecting C compile features
-- Detecting C compile features - done
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE  
-- Configuring done
-- Generating done
-- Build files have been written to: /home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/build
Scanning dependencies of target testfa
[ 25%] Building CXX object CMakeFiles/testfa.dir/Automaton.cc.o
[ 50%] Building CXX object CMakeFiles/testfa.dir/testfa.cc.o
/home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc: In member function ‘virtual void AutomatonCreateComplete_MAX_INT_Test::TestBody()’:
/home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc:713:15: error: ‘INT_MAX’ was not declared in this scope
  713 |   fa.addState(INT_MAX);
      |               ^~~~~~~
/home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc:5:1: note: ‘INT_MAX’ is defined in header ‘<climits>’; did you forget to ‘#include <climits>’?
    4 | #include "Automaton.h"
  +++ |+#include <climits>
    5 | 
/home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc: In function ‘int main(int, char**)’:
/home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc:3147:3: error: ‘cout’ was not declared in this scope; did you mean ‘std::cout’?
 3147 |   cout<<"\n\n";
      |   ^~~~
      |   std::cout
In file included from /home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-port.h:277,
                 from /home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/googletest/googletest/include/gtest/internal/gtest-internal.h:38,
                 from /home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/googletest/googletest/include/gtest/gtest.h:60,
                 from /home/jube/Univ/theorie_des_langages/projet/corr/2022/sandbox-tests/testfa.cc:2:
/usr/include/c++/10/iostream:61:18: note: ‘std::cout’ declared here
   61 |   extern ostream cout;  /// Linked to standard output
      |                  ^~~~
make[2]: *** [CMakeFiles/testfa.dir/build.make:95 : CMakeFiles/testfa.dir/testfa.cc.o] Erreur 1
make[1]: *** [CMakeFiles/Makefile2:95 : CMakeFiles/testfa.dir/all] Erreur 2
make: *** [Makefile:103 : all] Erreur 2
